# marelia-books-bot

./: .env.example  README.md  pyproject.toml
app/: main.py
app/books/: deduplication.py  metadata.py
app/gemini/: enricher.py  parser.py  vision.py
app/notion/: client.py  utils.py
app/services/: book_service.py
app/telegram/: handler.py
marelia-books/: .env.example  .gitignore  README.md  pyproject.toml
marelia-books/app/: config.py  main.py
marelia-books/app/books/: deduplication.py  metadata.py
marelia-books/app/gemini/: enricher.py  parser.py  vision.py
marelia-books/app/notion/: client.py  template.py  utils.py
marelia-books/app/openai/: parser.py  vision.py
marelia-books/app/services/: book_service.py
marelia-books/app/telegram/: handler.py
marelia-books/tests/: test_book_service_modes.py  test_config_startup.py  test_deduplication.py  test_metadata_mapping.py  test_notion_missing_updates.py  test_notion_page_population.py
tests/: test_book_service_modes.py  test_config_startup.py  test_cover_consistency.py  test_deduplication.py  test_gemini_enricher.py  test_gemini_vision.py  test_metadata_mapping.py  test_notion_missing_updates.py  test_notion_page_population.py  test_telegram_commands.py
